[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/Adventurer/Adventurer.gd" type="Script" id=1]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack1-01.png" type="Texture" id=2]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack1-00.png" type="Texture" id=3]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack3-00.png" type="Texture" id=4]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack3-01.png" type="Texture" id=5]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack3-02.png" type="Texture" id=6]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack3-03.png" type="Texture" id=7]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack3-04.png" type="Texture" id=8]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack3-05.png" type="Texture" id=9]
[ext_resource path="res://Assets/Flecha 2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack1-02.png" type="Texture" id=11]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack1-03.png" type="Texture" id=12]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack1-04.png" type="Texture" id=13]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack2-00.png" type="Texture" id=14]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack2-01.png" type="Texture" id=15]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack2-02.png" type="Texture" id=16]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack2-03.png" type="Texture" id=17]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack2-04.png" type="Texture" id=18]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack2-05.png" type="Texture" id=19]
[ext_resource path="res://Assets/Audios/blop.wav" type="AudioStream" id=20]
[ext_resource path="res://Assets/Audios/SwordShake.wav" type="AudioStream" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "Attack",
"speed": 11.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": false,
"name": "Attack",
"speed": 11.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 42.765, 50.7434 )

[node name="Node" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
editor/display_folded = true
margin_top = 419.0
margin_right = 1024.0
margin_bottom = 463.0

[node name="Floor" type="Panel" parent="Background"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_top = -417.0
margin_right = 1024.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="BackSlash" type="AnimatedSprite" parent="."]
position = Vector2( 748.276, 331.375 )
scale = Vector2( 3.71008, 4.63157 )
frames = SubResource( 1 )
animation = "Attack"
__meta__ = {
"_edit_lock_": true
}

[node name="Attack2" type="Label" parent="BackSlash"]
margin_left = -15.7075
margin_top = -8.93321
margin_right = 62.2925
margin_bottom = 5.06679
rect_scale = Vector2( 0.5, 0.5 )
text = "BACK SLASH"

[node name="Arrow" type="Sprite" parent="."]
position = Vector2( 225, 210 )
rotation = 1.5708
scale = Vector2( 0.165828, 0.158861 )
texture = ExtResource( 10 )

[node name="SwordSwipe" type="AnimatedSprite" parent="."]
position = Vector2( 201.501, 337.215 )
scale = Vector2( 4.3271, 4.63382 )
frames = SubResource( 2 )
animation = "Attack"
__meta__ = {
"_edit_lock_": true
}

[node name="Attack1" type="Label" parent="SwordSwipe"]
margin_left = -21.1459
margin_top = -12.3473
margin_right = 61.8541
margin_bottom = 1.65266
rect_scale = Vector2( 0.5, 0.5 )
text = "Sword Swipe"
uppercase = true

[node name="CollisionBackSlash" type="CollisionShape2D" parent="."]
position = Vector2( 197.22, 368.066 )
shape = SubResource( 3 )

[node name="CollisionSwordSwipe" type="CollisionShape2D" parent="."]
position = Vector2( 740, 370 )
shape = SubResource( 3 )

[node name="SwichSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )

[node name="SwordShakeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )
